--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,10 @@ env:
   - DJANGO=1.10.0
 install:
     - pip install --quiet --upgrade -r requirements.txt
+    - pip install --quiet --upgrade setuptools wheel
     - pip install --quiet --upgrade Django==$DJANGO
 script:
+    - python -m pip install -U pip
     - inv test
     - inv build
     - inv test_install
