--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,17 @@ language: python
 sudo: false
 python:
   - 2.7
-  - 3.3
   - 3.4
   - 3.5
   - pypy
 env:
-  - DJANGO=1.8.14
-  - DJANGO=1.9.9
-  - DJANGO=1.10.0
+  - DJANGO="Django<1.9"   # Django 1.8.x (LTS version)  |   2.7, 3.2 (until the end of 2016), 3.3, 3.4, 3.5
+  - DJANGO="Django<1.10"  # Django 1.9.x                |   2.7, 3.4, 3.5
+  - DJANGO="Django<1.11"  # Django 1.10.x               |   2.7, 3.4, 3.5
 install:
     - pip install --quiet --upgrade -r requirements.txt
     - pip install --quiet --upgrade setuptools wheel
-    - pip install --quiet --upgrade Django==$DJANGO
+    - pip install --quiet --upgrade "$DJANGO"
 script:
     - python -m pip install -U pip
     - inv test
@@ -24,9 +23,3 @@ after_success:
     - coveralls
 notifications:
     email: false
-matrix:
-  exclude:
-    - python: 3.3
-      env: DJANGO=1.9.9
-    - python: 3.3
-      env: DJANGO=1.10.0
