--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@
 -r requirements_test.txt
 
 # Requirements needed for development & build & testing
-coverage
-coveralls
-wheel
-setuptools
-docutils
-pygments
-tox
-flake8
+coverage==4.2
+coveralls==1.1
+wheel==0.29.0
+setuptools==28.6.1
+docutils==0.12
+pygments==2.1.3
+tox==2.4.1
+flake8==3.0.4
 invoke==0.12.2 # pyup: ignore
