--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,25 @@
 language: python
 sudo: false
 python:
-  - 2.7
-  - 3.4
-  - 3.5
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.5-dev" # 3.5 development branch
+  - "3.6"
+  - "3.6-dev" # 3.6 development branch
+  - "3.7-dev" # 3.7 development branch
+  - "nightly" # currently points to 3.7-dev
   - pypy
 env:
-  - DJANGO="Django<1.9"   # Django 1.8.x (LTS version)  |   2.7, 3.2 (until the end of 2016), 3.3, 3.4, 3.5
-  - DJANGO="Django<1.10"  # Django 1.9.x                |   2.7, 3.4, 3.5
-  - DJANGO="Django<1.11"  # Django 1.10.x               |   2.7, 3.4, 3.5
+  - DJANGO="Django<1.9"   # Django 1.8.x  (LTS version)  |   2.7, 3.2 (until the end of 2016), 3.3, 3.4, 3.5
+  - DJANGO="Django<1.10"  # Django 1.9.x                 |   2.7, 3.4, 3.5
+  - DJANGO="Django<1.11"  # Django 1.10.x                |   2.7, 3.4, 3.5
+  - DJANGO="Django<2.0"   # Django 1.11.x (LTS version)  |   2.7, 3.4, 3.5, 3.6
 install:
     - pip install --quiet --upgrade -r requirements.txt
     - pip install --quiet --upgrade setuptools wheel
     - pip install --quiet --upgrade "$DJANGO"
 script:
-    - python -m pip install -U pip
     - inv test
     - inv build
     - inv test_install
