--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@
 -r requirements_test.txt
 
 # Requirements needed for development & build & testing
-coverage==4.3.1
-coveralls==1.1
-wheel==0.29.0
-setuptools==34.3.3
-docutils==0.13.1
-pygments==2.1.3
-tox==2.5.0
-flake8==3.3.0
+coverage # pyup: ignore
+coveralls # pyup: ignore
+wheel>=0.29.0 # pyup: ignore
+setuptools>=34.3.3 # pyup: ignore
+docutils>=0.13.1 # pyup: ignore
+pygments>=2.1.3 # pyup: ignore
+tox>=2.5.0 # pyup: ignore
+flake8>=3.3.0 # pyup: ignore
 invoke==0.12.2 # pyup: ignore
