Updated tox config.

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
 envlist =
-    {py27,py35}-django18
-    {py27,py35}-django19
-    {py27,py35}-django110
+    {py36}-django18
+    {py36}-django19
+    {py36}-django110
+    {py36}-django111
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/activeview
 commands = python test_project/manage.py test
 deps =
-    django-18: Django>=1.8,<1.9
-    django-19: Django>=1.9,<1.10
-    django-110: Django>=1.10
+    django18:  Django>=1.8,  <1.9
+    django19:  Django>=1.9,  <1.10
+    django110: Django>=1.10, <1.11
+    django111: Django>=1.11, <2.0
     -r{toxinidir}/requirements_test.txt
