--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,4 @@ deps =
     django19:  Django>=1.9,  <1.10
     django110: Django>=1.10, <1.11
     django111: Django>=1.11, <2.0
-    -r{toxinidir}/requirements_test.txt
+    django-classy-tags==0.8.0
